fixed sidebar and clear columns

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -86,7 +86,7 @@
                 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
                 <div class="appName">
-                <img class='logo' src="../assets/images/icon1.png" alt="">
+                <img class='logo' src="../assets/images/icon1_.png" alt="">
                 <h1 class="display-4">SHOCKTAIL</h1>
             </div>
            
